feat: add oauth2 client

--- a/resource-server/src/main/resources/application-dev.yml
+++ b/resource-server/src/main/resources/application-dev.yml
@@ -5,10 +5,10 @@ logging:
 spring:
   security:
     oauth2:
-      resourceserver:
+      resource-server:
         # 验证token方式, 会调用/oauth2/jws端点
         jwt:
-          issuer-uri: http://127.0.0.1:8080
+          issuer-uri: http://haiyinlong.com:8080
 feign:
   client:
     config:
