--- a/oauth2-client/src/main/resources/application-dev.yml
+++ b/oauth2-client/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
             scope:
               - all
             authorization-grant-type: authorization_code
-#            client-authentication-method: basic
+            client-authentication-method: client_secret_basic
             redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
             provider: oauth-provider
         provider:
