--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>hspace</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
+    <modules>
+        <module>authorization-server</module>
+        <module>resource-server</module>
+        <module>oauth2-client</module>
+    </modules>
 </project>
