fix: config jwt url

--- a/oauth2-client/src/main/resources/application-dev.yml
+++ b/oauth2-client/src/main/resources/application-dev.yml
@@ -24,6 +24,6 @@ spring:
             token-uri: http://haiyinlong-test.com:8080/oauth2/token
             user-info-uri: http://haiyinlong-test.com:8080/userinfo
             user-name-attribute: name
-            jwk-set-uri: http://haiyinlong-test.com:8080
+            jwk-set-uri: http://haiyinlong-test.com:8080/oauth2/jwks
 
 
